--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
             this.vy = 0;
             this.rotation = 0;
             this.thrust = 0;
-            this.maxThrust = 0.4; // Reduced from 0.8
-            this.friction = 0.95; // Increased from 0.98 for more control
-            this.rotationSpeed = 0.08; // Reduced from 0.12
-            this.thrustAccel = 0.015; // Reduced from 0.03
+            this.maxThrust = 0.4;
+            this.friction = 0.95;
+            this.rotationSpeed = 0.08;
+            this.thrustAccel = 0.015;
             this.engineParticles = [];
             this.bullets = [];
             this.lastShot = 0;
@@ -460,6 +460,11 @@
             this.maxBinaryStars = 2;
             this.hasMoved = false;
             this.instructionPopup = null;
+
+            // Performance optimizations
+            this.lastFrameTime = 0;
+            this.targetFPS = 60;
+            this.frameInterval = 1000 / this.targetFPS;
 
             this.setupRocket();
             this.setupControls();
@@ -656,7 +661,8 @@
               border-radius: 50%;
               z-index: 9996;
               box-shadow: 0 0 20px #ffd700;
-              animation: twinkle 1.5s infinite alternate;
+              will-change: transform;
+              transform: translateZ(0);
             `;
 
             // Add twinkle animation
@@ -674,8 +680,8 @@
             const y = Math.random() * (window.innerHeight - 80) + 40;
 
             // Random velocity for slow movement
-            const vx = (Math.random() - 0.5) * 0.5; // -0.25 to 0.25 pixels per frame
-            const vy = (Math.random() - 0.5) * 0.5; // -0.25 to 0.25 pixels per frame
+            const vx = (Math.random() - 0.5) * 0.3; // Reduced from 0.5
+            const vy = (Math.random() - 0.5) * 0.3; // Reduced from 0.5
 
             star.style.left = x + 'px';
             star.style.top = y + 'px';
@@ -696,9 +702,8 @@
               if (star.y < -50) star.y = window.innerHeight + 50;
               if (star.y > window.innerHeight + 50) star.y = -50;
 
-              // Update element position
-              star.element.style.left = star.x + 'px';
-              star.element.style.top = star.y + 'px';
+              // Use transform instead of left/top for better performance
+              star.element.style.transform = `translate(${star.x}px, ${star.y}px)`;
             });
           }
 
@@ -726,7 +731,8 @@
               border-radius: 50%;
               z-index: 9996;
               box-shadow: 0 0 25px #ff4444;
-              animation: twinkle 2s infinite alternate;
+              will-change: transform;
+              transform: translateZ(0);
             `;
 
             // Create small white star
@@ -740,7 +746,8 @@
               border-radius: 50%;
               z-index: 9996;
               box-shadow: 0 0 15px #ffffff;
-              animation: twinkle 2s infinite alternate;
+              will-change: transform;
+              transform: translateZ(0);
             `;
 
             document.body.appendChild(star1);
@@ -768,11 +775,9 @@
               binary.star2.x = binary.centerX + Math.cos(binary.angle + Math.PI) * binary.orbitRadius;
               binary.star2.y = binary.centerY + Math.sin(binary.angle + Math.PI) * binary.orbitRadius;
 
-              // Update element positions
-              binary.star1.element.style.left = binary.star1.x + 'px';
-              binary.star1.element.style.top = binary.star1.y + 'px';
-              binary.star2.element.style.left = binary.star2.x + 'px';
-              binary.star2.element.style.top = binary.star2.y + 'px';
+              // Use transform for better performance
+              binary.star1.element.style.transform = `translate(${binary.star1.x}px, ${binary.star1.y}px)`;
+              binary.star2.element.style.transform = `translate(${binary.star2.x}px, ${binary.star2.y}px)`;
             });
           }
 
@@ -872,8 +877,7 @@
                 bullet.element.remove();
                 this.bullets.splice(index, 1);
               } else {
-                bullet.element.style.left = bullet.x + 'px';
-                bullet.element.style.top = bullet.y + 'px';
+                bullet.element.style.transform = `translate(${bullet.x}px, ${bullet.y}px)`;
               }
             });
 
@@ -886,8 +890,7 @@
                 particle.element.remove();
                 this.engineParticles.splice(index, 1);
               } else {
-                particle.element.style.left = particle.x + 'px';
-                particle.element.style.top = particle.y + 'px';
+                particle.element.style.transform = `translate(${particle.x}px, ${particle.y}px)`;
                 particle.element.style.opacity = particle.life / 20;
               }
             });
@@ -901,8 +904,7 @@
               if (enemy.x <= 0 || enemy.x >= window.innerWidth) enemy.vx *= -1;
               if (enemy.y <= 0 || enemy.y >= window.innerHeight) enemy.vy *= -1;
 
-              enemy.element.style.left = enemy.x + 'px';
-              enemy.element.style.top = enemy.y + 'px';
+              enemy.element.style.transform = `translate(${enemy.x}px, ${enemy.y}px)`;
 
               // Check bullet collisions
               this.bullets.forEach((bullet, bulletIndex) => {
@@ -981,9 +983,8 @@
           }
 
           updateRocketPosition() {
-            this.rocket.style.left = (this.x - 20) + 'px';
-            this.rocket.style.top = (this.y - 20) + 'px';
-            this.rocket.style.transform = `rotate(${this.rotation}rad)`;
+            // Use transform instead of left/top for better performance
+            this.rocket.style.transform = `translate(${this.x - 20}px, ${this.y - 20}px) rotate(${this.rotation}rad)`;
           }
 
           shoot() {
@@ -1023,6 +1024,8 @@
               border-radius: 50%;
               z-index: 9998;
               box-shadow: 0 0 8px #ff6b6b;
+              will-change: transform;
+              transform: translateZ(0);
             `;
 
             // Fix: Use actual rocket position, not calculated position
@@ -1101,7 +1104,14 @@
           }
 
           gameLoop() {
-            this.update();
+            const currentTime = performance.now();
+            const deltaTime = currentTime - this.lastFrameTime;
+
+            if (deltaTime >= this.frameInterval) {
+              this.update();
+              this.lastFrameTime = currentTime;
+            }
+
             requestAnimationFrame(() => this.gameLoop());
           }
 
